--- a/style.css
+++ b/style.css
@@ -2,16 +2,44 @@
     background-color: aquamarine;
     color: darkblue;
     border: 10px;
-    border-radius: 40px;
+    border-radius: 40px;    
+    border-color: darkblue;
     height: 70%;
     width: 80%;
     text-align: center;
     margin: auto;
     font-family: Montserrat, sans-serif;
     border-style: inset;
-    vertical-align: middle
+    vertical-align: middle;
 }
 
+.navbar {
+    height: 12%;
+    width: 100%;
+    position: fixed;
+    border: 3px;
+    border-radius: 5px;
+    margin: auto;
+}
+
+div td {
+    padding: 20px;;    
+    border: 3px inset darkblue;
+    border-radius: 5px;
+    background-color: aquamarine;
+    color: darkblue;
+    font-family: Montserrat, sans-serif;
+    border-collapse: collapse;
+}
+td a {
+    display: block;
+    height: 100%;
+}
+div td hover{
+    background-color: darkblue;
+    color: aquamarine;
+    border: outset;
+}
 
 
 body {
@@ -30,7 +58,9 @@ body {
     text-align: center;
     border-radius: 50px;
     border-style: inset;
+    border-color: aquamarine;
     vertical-align: middle;
+    display: none;
 }
 
 #musicButton:hover {
